--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,7 @@
     color: var(--text-faint);
 }
 
-.note-id-list-items {
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-
-.note-id-list-items > div {
+.virtual-list-item {
     left: 0;
     right: 0;
     overflow: hidden;
